# CBSE-Result

./: .gitignore  cbse_results.sqlite3  data.py  input.css  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  results.json  tailwind.config.js  vercel.json
static/css/: output.css
templates/: index.html  results.html
