[project]
name = "cbse-result"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "thefuzz>=0.22.1",
    "uvicorn[standard]>=0.34.2",
]
